--- a/index.html
+++ b/index.html
@@ -1,13 +1,92 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="stilo.css">
-	<title>teste</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Consultoria Cyber Tech - Inovação Tecnologica</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #f4f4f4;
+    }
+    header {
+      background-color: #1e1e1e;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    nav {
+      background-color: #333;
+      padding: 10px;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .container {
+      max-width: 1000px;
+      margin: 20px auto;
+      padding: 20px;
+      background-color: white;
+    }
+    .article {
+      margin-bottom: 30px;
+    }
+    .article h2 {
+      color: #333;
+    }
+    .article p {
+      line-height: 1.6;
+    }
+    footer {
+      background-color: #1e1e1e;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      position: relative;
+      bottom: 0;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
+  <header>
+    <h1>Tech News</h1>
+    <p>O melhor da inovação, gadgets e ciência</p>
+  </header>
 
+  <nav>
+    <a href="#">Início</a>
+    <a href="#">Notícias</a>
+    <a href="#">Reviews</a>
+    <a href="#">Contato</a>
+  </nav>
 
+  <div class="container">
+    <div class="article">
+      <h2>Apple anuncia novo iPhone com IA integrada</h2>
+      <p>A Apple revelou seu novo iPhone com inteligência artificial embarcada, prometendo transformar a forma como usamos nossos dispositivos móveis.</p>
+    </div>
+
+    <div class="article">
+      <h2>Google lança atualização revolucionária do Android</h2>
+      <p>A nova versão do Android traz melhorias em desempenho, segurança e um design mais intuitivo para os usuários.</p>
+    </div>
+
+    <div class="article">
+      <h2>Startup brasileira cria bateria que dura 1 semana</h2>
+      <p>Inovação promete mudar o mercado de eletrônicos com baterias mais eficientes e sustentáveis.</p>
+    </div>
+  </div>
+
+  <footer>
+    <p>&copy; 2025 Tech News - Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
