--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Consultoria/Cyber_Tech</title>
+  <title>WWW.Consultoria/Cyber/Tech.com</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -57,21 +57,21 @@
 </head>
 <body>
   <header>
-    <h1>Consultoria Cyber Tech - Inovação tecnológica</h1>
-    <p>O melhor da inovação, gadgets e ciência</p>
+    <h1>Consultoria Cyber Tech</h1>
+    <p>Inovação tecnológica</p>
   </header>
 
   <nav>
     <a href="#">Início</a>
-    <a href="#">Notícias</a>
-    <a href="#">Reviews</a>
+    <a href="#">Empresas</a>
+    <a href="#">Novidades</a>
     <a href="#">Contato</a>
   </nav>
 
   <div class="container">
     <div class="article">
-      <h2>Apple anuncia novo iPhone com IA integrada</h2>
-      <p>A Apple revelou seu novo iPhone com inteligência artificial embarcada, prometendo transformar a forma como usamos nossos dispositivos móveis.</p>
+      <h2>Consultoria/Cyber_Tech Anuncia Uma Nova Plataforma Integrada, Em Prestar Serviços Terceirizados Para As Empresas </h2>
+      <p>cyber-Tech revelou seu novo Projeto, prometendo transformar a Inovação Tecnológica Da Forma Correta e Terceirizando Serviço.</p>
     </div>
 
     <div class="article">
