--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WWW.Consultoria/Cyber/Tech.com</title>
+  <title>www.Consultoria/Cyber/Tech.com</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -65,18 +65,17 @@
     <a href="#">Início</a>
     <a href="#">Empresas</a>
     <a href="#">Novidades</a>
-    <a href="#">Contato</a>
   </nav>
 
   <div class="container">
     <div class="article">
-      <h2>Consultoria/Cyber_Tech Anuncia Uma Nova Plataforma Integrada, Em Prestar Serviços Terceirizados Para As Empresas </h2>
-      <p>cyber-Tech revelou seu novo Projeto, prometendo transformar a Inovação Tecnológica Da Forma Correta e Terceirizando Serviço.</p>
+      <h2>Consultoria Cyber Tech Anuncia Uma Nova Plataforma integrada</h2>
+      <p>Cyber Tech Revelou Seu Novo Projeto, Prometendo Transformar A Inovação Tecnológica Da Forma Correta e Terceirizando Serviço.</p>
     </div>
 
     <div class="article">
-      <h2>Google lança atualização revolucionária do Android</h2>
-      <p>A nova versão do Android traz melhorias em desempenho, segurança e um design mais intuitivo para os usuários.</p>
+      <h2>Quais Serviços São Prestados Pela consultoria?</h2>
+      <p>Criação De Projetos Em Páginas front - End É Back - end, Para As Empresas De Grande Portes, Criamos Também Softwares Para As Empresas Terceirizadas, É Damos Suportes De Manutenção Em Computadores Empresáriais</p>
     </div>
 
     <div class="article">
