--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   </div>
 
   <footer>
-    <p>&copy; WWW.Consultoria/Cyber-Tech.Com</p>
+    <p>&copy;Consultoria Cyber Tech</p>
   </footer>
 </body>
 </html>
