--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       padding: 15px;
       position: relative;
       bottom: 0;
-      width: 90%;
+      width: 90px;
     }
   </style>
 </head>
