--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </div>
 
   <footer>
-    <p>&copy;Consultoria Cyber Tech</p>
+    <center><p>&copy;Consultoria Cyber Tech</p></center>
   </footer> 
 </body>
 </html>
