--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </div>
   </div>
 
-  <footer>
-    <center><p>&copy;Consultoria Cyber Tech</p></center>
-  </footer> 
+<center>  <footer>
+    <p>&copy;Consultoria Cyber Tech</p>
+  </footer> </center>
 </body>
 </html>
