--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </div>
 
     <div class="article">
-      <h2>Startup brasileira cria bateria que dura 1 semana</h2>
+      <center><h2>Startup brasileira cria bateria que dura 1 semana</h2>
       <p>Inovação promete mudar o mercado de eletrônicos com baterias mais eficientes e sustentáveis.</p>
-    </div>
+    </div></center>
   </div>
 
 <center>  <footer>
