--- a/index.html
+++ b/index.html
@@ -22,21 +22,27 @@
 
   <div class="container">
     <div class="article">
-      <h2>Consultoria Cyber Tech Anuncia Uma Nova Plataforma integrada</h2>
+      <h2>Consultoria Cyber Tech Anuncia Uma Nova Plataforma Integrada</h2>
       <p>Cyber Tech Revelou Seu Novo Projeto, Prometendo Transformar A Inovação Tecnológica Da Forma Correta e Terceirizando Serviço.</p>
     </div>
 
     <div class="article">
-      <h2>Quais Serviços São Prestados Pela consultoria?</h2>
-      <p>Criação De Projetos Em Páginas front - End É Back - end, Para As Empresas De Grande Portes, Criamos Também Softwares Para As Empresas Terceirizadas, É Damos Suportes De Manutenção Em Computadores Empresáriais</p>
+      <h2>Quais Serviços São Prestados Pela Consultoria?</h2>
+      <p>Criação De Projetos Em Páginas Front - End É Back - End, Para As Empresas De Grande Portes, Criamos Também Softwares Para As Empresas Terceirizadas, É Damos Suportes De Manutenção Em Computadores Empresáriais</p>
     </div>
 
     <div class="article">
-     <h2>Vocês Tem Engenheiros Em Software?</h2>
-      <p>Sim A Nossa Inovação Promete Mudar O Mercado De Software Na Engenharia De Projetos, Nossos Engenheiros Também mexem Com Arquitetura De Programação Com Mais Eficientes E Sustentáveis.</p>
+     <h2>Vocês Tem Engenheiros De Software?</h2>
+      <p>Sim, A Nossa Inovação Promete Mudar O Mercado De Software,Os Nossos Engenheiros De Projetos Também Ficam Por Conta De Arquiteta Estrutura De Linguagem, Criando Projetos Inovadores Com Código Avançados De Programação Com Mais Eficientes.</p>
     </div>
   </div>
 
+    <div class="article">
+<h3>Vocês Trabalham Com Serviços De Afiliados?</h3>
+<p>Sim, Trabalhamos Com Todos Os Produtos Digitais Em Dropshipping, Temos Variedades De Produtos Digital E Filtros De Vendas.</p>
+
+
+  
 <center>  <footer>
     <p>&copy;Consultoria Cyber Tech</p>
   </footer> </center>
