--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     <div class="article">
 <h3>Vocês Trabalham Com Serviços De Afiliados?</h3>
 <p>Sim, Trabalhamos Com Todos Os Produtos Digitais Em Dropshipping, Temos Variedades De Produtos Digital E Filtros De Vendas.</p>
-
+ </div>
+  </div>
 
   
 <center>  <footer>
