--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <header>
     <h1>Consultoria Cyber Tech</h1>
     <p>Inovação tecnológica</p>
+
+        <img src="https://static2.mytuner.mobi/media/tvos_radios/R8hgnCYaAg.jpg" alt="Logo" width="90px">
+
+    
   </header>
 
   <nav>
@@ -20,6 +24,9 @@
     <a href="#">Novidades</a>
   </nav>
 
+
+
+  
   <div class="container">
     <div class="article">
       <h2>Consultoria Cyber Tech Anuncia Uma Nova Plataforma Integrada</h2>
