--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <h1>Consultoria Cyber Tech</h1>
     <p>Inovação tecnológica</p>
 
-        <img src="https://static2.mytuner.mobi/media/tvos_radios/R8hgnCYaAg.jpg" alt="Logo" width="90px">
 
     
   </header>
@@ -25,6 +24,7 @@
   </nav>
 
 
+  <img src="https://github.com/eliseuCyberdyni/celular/blob/main/Logo%20tipo%20da%20empresa.PNG?raw=true" alt="Logo" width="90px">
 
   
   <div class="container">
