--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <a href="#">Novidades</a>
   </nav>
 
-
-  <img src="https://github.com/eliseuCyberdyni/celular/blob/main/Logo%20tipo%20da%20empresa.PNG?raw=true" alt="Logo" width="90px">
+<br><br>
+<center><img src="https://github.com/eliseuCyberdyni/celular/blob/main/Logo_tipo_da_empresa-removebg-preview.png?raw=true" alt="Logo" width="110px"></center>
 
   
   <div class="container">
