--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <a href="#">Novidades</a>
   </nav>
 
-<br><br>
-<center><img src="https://github.com/eliseuCyberdyni/celular/blob/main/Logo_tipo_da_empresa-removebg-preview.png?raw=true" alt="Logo" width="150px"></center>
-
+<div>
+<center><img src="https://github.com/eliseuCyberdyni/celular/blob/main/Logo_tipo_da_empresa-removebg-preview.png?raw=true" alt="Logo" width="199px"></center>
+</div>
   
   <div class="container">
     <div class="article">
