--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
  </div>
   </div>
 
-<center><img src="https://i.gifer.com/origin/21/21313cdc50dcf97364fe224a7de388af_w200.webp" alt="Logo" width="280px"></center>
+<center><img src="https://i.gifer.com/78Mz.gif" alt="Logo" width="280px"></center>
 
 <center>  <footer>
     <p>&copy;Consultoria Cyber Tech</p>
