--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
 
   <div>
-  <h1 class="neon-text">A Evolução Começa Agora!</h1>
+<p style="color: red;">A Evolução CyberTech</p>
 
 
     
