--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
 
   <div>
-<p style="color: red;">A Evolução CyberTech</p>
+<center><p style="color: black;">Evolução CyberTech</p></center>
 
 
     
