--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
   </div>
 
   <div>
-<center><p style="color: black;">Evolução CyberTech</p></center>
+<center><h1><p style="color: black;">Evolução CyberTech</p></h1></center>
 
 
     
-<center><img src="https://i.gifer.com/78Mz.gif" alt="Logo" width="280px"></center>
+<center><img src="https://github.com/eliseuCyberdyni/celular/blob/main/78Mz-unscreen.gif?raw=true" alt="Logo" width="280px"></center>
 
 </div>
 <center>  <footer>
