--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
 
   <nav>
-    <a href="#">Início</a>
+    <a href="https://eliseu-freelancer-com.netlify.app/">Início</a>
     <a href="#">Empresas</a>
     <a href="#">Novidades</a>
   </nav>
@@ -57,6 +57,8 @@
 <center><img src="https://github.com/eliseuCyberdyni/celular/blob/main/78Mz-unscreen.gif?raw=true" alt="Logo" width="280px"></center>
 
 </div>
+
+  <br><br><br> 
 <center>  <footer>
     <p>&copy;Consultoria Cyber Tech</p>
   </footer> </center>
